# rinab

./: .env  Cargo.toml  Dockerfile
migrations/: 20240128134535_init.up.sql
src/: auth.rs  authorization.rs  handler.rs  into_response.rs  main.rs  model.rs  response.rs  route.rs  token.rs
static/: main.html  signin.html  signin2.html  signin3.html  signin4.html
