[package]
name = "rinab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
axum = { version = "0.7.4", features = [] }
# async HTTP client
reqwest = { version = "0.11.23", features = ["json"] }
# serialization/deserialization  for JSON
serde = { version = "1.0.196", features = ["derive"] }
# database access
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
# async runtime
tokio = { version = "1.35.1", features = ["full"] }
once_cell = "1.19.0"
serde_json = "1.0.112"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9.2.0"
tower-http = { version = "0.5.1", features = ["cors"] }
