[package]
name = "rinab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
axum = "0.7.4"
# async HTTP client
reqwest = { version = "0.11.24", features = ["json"] }
# serialization/deserialization  for JSON
serde = { version = "1.0.196", features = ["derive"] }
# database access
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls", "chrono", "uuid"] }
# async runtime
tokio = { version = "1.36.0", features = ["full"] }
once_cell = "1.19.0"
serde_json = "1.0.113"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.2.0"
tower-http = { version = "0.5.1", features = ["cors"] }
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand_core = { version = "0.6.4", features = ["std"] }
time = "0.3.34"
argon2 = "0.5.3"
base64 = "0.21.7"
redis = { version = "0.24.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
